add new crud example with postgres, major refactor of codebase